--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,8 @@ body {
   margin-bottom: 1em;
 }
 .react-calendar__navigation button {
+  font-weight: bold;
+  color: #db4455;
   min-width: 44px;
   background: none;
 }
@@ -210,14 +212,21 @@ body {
 
 /* Home */
 
-.show_date {
+.show_title {
   font-family: 'Nanum Pen Script', cursive;
-  font-size: 2.5vw;
+  font-size: 2vw;
   margin-top: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
   align-items: center;
+}
+
+.show_title button{
+  background: none;
+  box-shadow: none;
+  font-family: 'Nanum Pen Script', cursive;
+  font-size: 2vw;
 }
 
 .show_content {
