--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,18 @@ body {
   font-family: 'Yeon Sung';
 }
 
+@media (max-width:580px){
+  .App{
+    width: 570px;
+  }
+}
+
+@media (min-width:580px){
+  .App{
+    width: 650px;
+  }
+}
+
 .App {
   margin:auto;
   margin-top: 15px;
@@ -222,9 +234,15 @@ body {
   align-items: center;
 }
 
+.show_title span{
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 5px;
+  margin: 10px;
+  border-radius: 8px;
+  background-color: #9cc4ab;
+}
+
 .show_title button{
-  background: none;
-  box-shadow: none;
   font-family: 'Nanum Pen Script', cursive;
   font-size: 2vw;
 }
@@ -245,6 +263,7 @@ body {
 
 .show_content .MyButton{
   width: 30%;
+  margin-top: 0;
 }
 
 .show_box{
